Repo->hook entity relationship now has only mappedBy

--- a/src/DevBoard/Github/Repo/Resources/config/doctrine/GithubRepo.orm.yml
+++ b/src/DevBoard/Github/Repo/Resources/config/doctrine/GithubRepo.orm.yml
@@ -58,10 +58,7 @@ DevBoard\Github\Repo\Entity\GithubRepo:
   oneToOne:
     hook:
       targetEntity: DevBoard\Github\Hook\Entity\GithubHook
-      inversedBy: id
-      joinColumn:
-        name: hook
-        referencedColumnName: id
+      mappedBy: repo
   manyToMany:
     projects:
       targetEntity: DevBoard\Core\Project\Entity\Project
