When project is added hook will be created (if persmissions allow it)

--- a/src/DevBoard/CoreBundle/Resources/config/services.yml
+++ b/src/DevBoard/CoreBundle/Resources/config/services.yml
@@ -12,3 +12,4 @@ services:
       - "@core.project.factory"
       - "@doctrine.orm.entity_manager"
       - "@github.sync.branches.handler"
+      - "@github.api.repo.hook.client.factory"
