--- a/etc/ci/behat.yml
+++ b/etc/ci/behat.yml
@@ -102,3 +102,4 @@ default:
             show_auto:    false
             files_path:   /home/ubuntu/devboardxyz/
         Behat\Symfony2Extension: ~
+        #RMiller\BehatSpec\BehatExtension: ~
