Not running GithubIntegration PHPUnit tests on Circle,Travis & Shippable

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ before_script:
 
 script:
   - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
-  - php -d 'xdebug.max_nesting_level=500' bin/phpunit
+  - php -d 'xdebug.max_nesting_level=500' bin/phpunit --exclude-group GithubIntegration
   - sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
   - php bin/coveralls -v
   - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
