Running composer without xdebug on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,8 @@ before_script:
   - cp etc/ci/behat.yml behat.yml
   - cp etc/ci/phpspec.yml phpspec.yml
 
+  - sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+
   - composer install --prefer-source
   - php app/console doctrine:database:create --env=dev
   - php app/console doctrine:database:create --env=test
