--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -39,8 +39,7 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
-        - { path: ^/project/, role: ROLE_USER }
-        - { path: ^/dashboard/, role: ROLE_USER }
+        - { path: ^/my/, role: ROLE_USER }
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
