--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,6 @@ before_script:
   - cp etc/ci/phpspec.yml phpspec.yml
   - sed -i 's/https:\/\/test.devboardxyz.loc\//http:\/\/localhost:8000\/app_test.php\//' behat.yml
 
-  - php app/console server:start --env=test &
-
   - sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
   - composer install --prefer-source
 
@@ -43,6 +41,7 @@ before_script:
   - sed -i 's/FAKE-GITHUB-ID-TEST/"'$GITHUB_ID'"/' app/config/parameters.yml
   - sed -i 's/FAKE-GITHUB-SECRET-TEST/"'$GITHUB_SECRET'"/' app/config/parameters.yml
   - php app/console assetic:dump --env=prod --no-debug
+  - php app/console server:start --env=test
 
 script:
   - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
