--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_script:
   - php app/console doctrine:fixtures:load --env=test --no-interaction
   - sed -i 's/FAKE-GITHUB-ID-TEST/"'$GITHUB_ID'"/' app/config/parameters.yml
   - sed -i 's/FAKE-GITHUB-SECRET-TEST/"'$GITHUB_SECRET'"/' app/config/parameters.yml
-  - php app/console assetic:dump --env=prod --no-debug
+  #- php app/console assetic:dump --env=prod --no-debug
   - php app/console server:start --env=test
 
 script:
