--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ before_script:
   - sh -e /etc/init.d/xvfb start
   - export DISPLAY=:99.0
 
-  - curl -L http://selenium-release.storage.googleapis.com/2.46/selenium-server-standalone-2.46.0.jar > selenium.jar
-  - java -jar selenium.jar > selenium.log 2>&1 &
+  - curl -L http://selenium-release.storage.googleapis.com/2.46/selenium-server-standalone-2.46.0.jar > bin/selenium.jar
+  - java -jar bin/selenium.jar > selenium.log 2>&1 &
 
   - cp etc/travis-ci/.coveralls.yml .coveralls.yml
   - cp etc/travis-ci/app/config/parameters.yml app/config/parameters.yml
