--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   - sh -e /etc/init.d/xvfb start
   - export DISPLAY=:99.0
 
-  - curl -L http://selenium-release.storage.googleapis.com/2.46/selenium-server-standalone-2.46.0.jar > bin/selenium.jar
+  - if [ ! -f bin/selenium.jar ]; then curl -L http://selenium-release.storage.googleapis.com/2.46/selenium-server-standalone-2.46.0.jar > bin/selenium.jar; fi
   - java -jar bin/selenium.jar > selenium.log 2>&1 &
 
   - cp etc/travis-ci/.coveralls.yml .coveralls.yml
