Using ant code standard checks on TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,10 +55,7 @@ script:
   - if [[ $coverage == 'phpspec' ]]; then sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini; fi;
   - if [[ $coverage == 'phpspec' ]]; then php bin/coveralls -v; fi;
   - ./bin/behat
-  - ./bin/phpmd src/ text phpmd.xml
-  - ./bin/phpmd app/ text phpmd.xml
-  - ./bin/phpcs --standard=phpcs.xml src/ -n
-  - ./bin/phpcs --standard=phpcs.xml app/ -n
-  - ./bin/php-cs-fixer fix spec/ --dry-run --diff --level=symfony --fixers=short_array_syntax,align_double_arrow,align_equals,no_blank_lines_before_namespace,ordered_use,phpdoc_order,-unused_use,-empty_return
-  - ./bin/php-cs-fixer fix src/ --dry-run --diff --level=symfony --fixers=short_array_syntax,align_double_arrow,align_equals,no_blank_lines_before_namespace,ordered_use,phpdoc_order,-unused_use,-empty_return
-  - ./bin/php-cs-fixer fix tests/ --dry-run --diff --level=symfony --fixers=short_array_syntax,align_double_arrow,align_equals,no_blank_lines_before_namespace,ordered_use,phpdoc_order,-unused_use,-empty_return
+  - rm -rf app/cache/* app/check.php app/SymfonyRequirements.php
+  - ant php-cs-fixer-check-task
+  - ant phpcs-task
+  - ant phpmd-task
