--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ addons:
       - xvfb
 
 sudo: false
-
 matrix:
     include:
         - php: 5.6
@@ -21,8 +20,11 @@ cache:
   directories:
     - vendor
     - bin
+    - node_modules
 
 before_script:
+  - nvm install 4.1.2
+  - npm install
   - sh -e /etc/init.d/xvfb start
   - export DISPLAY=:99.0
 
