--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ before_script:
 
 script:
   - if [[ $coverage == 'phpunit' ]]; then sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini; fi;
-  - php -d 'xdebug.max_nesting_level=500' bin/phpunit --exclude-group GithubIntegration
+  - php -d 'xdebug.max_nesting_level=500' bin/phpunit --exclude-group GitHubMutable
   - if [[ $coverage == 'phpunit' ]]; then sed -i 's/^/;/' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini; fi;
   - if [[ $coverage == 'phpunit' ]]; then php bin/coveralls -v; fi;
   - if [[ $coverage == 'phpspec' ]]; then sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini; fi;
