--- a/etc/provisioning/roles/beanstalkdaemon/tasks/main.yml
+++ b/etc/provisioning/roles/beanstalkdaemon/tasks/main.yml
@@ -4,8 +4,8 @@
   sudo: yes
   with_items:
     - beanstalkd
-- name: Set up beanstalk listening IP address
-  lineinfile: "dest=/etc/default/beanstalkd regexp='^BEANSTALKD_LISTEN_ADDR=127.0.0.1' line='BEANSTALKD_LISTEN_ADDR={{ private_ip }}'"
-  sudo: yes
-  notify:
-    - RestartBeanstalkd
+#- name: Set up beanstalk listening IP address
+#  lineinfile: "dest=/etc/default/beanstalkd regexp='^BEANSTALKD_LISTEN_ADDR=127.0.0.1' line='BEANSTALKD_LISTEN_ADDR={{ private_ip }}'"
+#  sudo: yes
+#  notify:
+#    - RestartBeanstalkd
