Provisioning beanstalk and supervisor on vagrant dev

--- a/etc/provisioning/setup.yml
+++ b/etc/provisioning/setup.yml
@@ -14,8 +14,8 @@
     #- phpmyadmin
     - symfony2
     - selenium
-    #- beanstalkdaemon
-    #- beanstalkclient
-    #- supervisord
+    - beanstalkdaemon
+    - beanstalkclient
+    - supervisord
     #- elasticsearch
     - nodejs
