--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "hwi/oauth-bundle": "0.4.*@dev",
         "knplabs/github-api": "~1.4",
-        "knplabs/knp-time-bundle": "^1.3"
+        "knplabs/knp-time-bundle": "^1.3",
+        "leezy/pheanstalk-bundle": "~3.0"
     },
     "require-dev": {
         "sensio/generator-bundle":                  "~3.0",
