--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ general:
   artifacts:
     - "build/"
     - "tmp/"
-    - "node_modules/"
+    #- "node_modules/"
 dependencies:
   pre:
     - npm install
