--- a/package.json
+++ b/package.json
@@ -12,18 +12,14 @@
     "classnames": "2.2.1",
     "moment": "2.10.6",
     "react": "0.14.3",
-    "react-dom": "0.14.3",
-    "uglify-js": "latest",
-    "uglifycss": "latest"
+    "react-dom": "0.14.3"
   },
   "devDependencies": {
-    "babel-cli": "6.3.17",
     "babel-core": "6.3.15",
     "babel-loader": "6.2.0",
     "babel-plugin-transform-runtime": "6.3.13",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
-    "babel-preset-stage-0": "6.3.13",
     "webpack": "1.12.9"
   },
   "scripts": {
