--- a/shippable.yml
+++ b/shippable.yml
@@ -16,6 +16,7 @@ php:
 
 before_script:
   - curl -sL https://deb.nodesource.com/setup_4.x | sudo -E bash -
+  - yes '' | pecl install -f apcu-4.0.10
   - sudo apt-get update
   - sudo apt-get install -y php5-fpm
   - sudo apt-get install -y nginx nodejs
