--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "0.8.1",
     "babel-polyfill": "6.3.14",
     "babel-runtime": "6.3.13",
+    "camelcase": "2.0.1",
     "classnames": "2.2.1",
     "moment": "2.10.6",
     "react": "0.14.3",
