Fixing up hook property name on GithubRepo

--- a/src/DevBoard/Github/Repo/Resources/config/doctrine/GithubRepo.orm.yml
+++ b/src/DevBoard/Github/Repo/Resources/config/doctrine/GithubRepo.orm.yml
@@ -58,7 +58,10 @@ DevBoard\Github\Repo\Entity\GithubRepo:
   oneToOne:
     hook:
       targetEntity: DevBoard\Github\Hook\Entity\GithubHook
-      mappedBy: repo
+      inversedBy: repo
+      joinColumn:
+        name: hookId
+        referencedColumnName: id
   manyToMany:
     projects:
       targetEntity: DevBoard\Core\Project\Entity\Project
