--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-runtime": "6.3.13",
     "camelcase": "2.0.1",
     "classnames": "2.2.1",
+    "es6-promise": "3.0.2",
     "moment": "2.10.6",
     "react": "0.14.3",
     "react-dom": "0.14.3"
